# stock_statistical_arbitrage_demo

./: README.md  pyproject.toml
configs/: baseline_lightgbm.yaml  baseline_nn.yaml
stock_statistical_arbitrage/: datayes.py  nn.py  utils.py
stock_statistical_arbitrage/strategy/: __init__.py  base_lightgbm.py  base_nn.py
